# argo-dns

./: .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  addcp.py  adns.cpp  aquery.cpp  atest.cpp  clean.sh  config.json  fix.py  template.py  template_cpp  template_hpp  valgrind.supp
acore/: CMakeLists.txt  buffer.cpp  buffer.hpp  cache.hpp  cache_config.cpp  cache_config.hpp  client_config.cpp  client_config.hpp  config.cpp  config.hpp  config_reader.cpp  config_reader.hpp  config_types.cpp  config_types.hpp  datetime.cpp  datetime.hpp  exception.cpp  exception.hpp  frequency_meter.cpp  frequency_meter.hpp  handler_pool.hpp  json_serializable.cpp  json_serializable.hpp  message_queue.hpp  monitor.cpp  monitor.hpp  nullable.hpp  queue_multiplexer.hpp  read_write_lock.cpp  read_write_lock.hpp  run_state.cpp  run_state.hpp  server_config.cpp  server_config.hpp  thread_pool.hpp  token_store.cpp  token_store.hpp  types.hpp  util.cpp  util.hpp
api/: CMakeLists.txt  api.cpp  api.hpp  api_address_list_v1.cpp  api_address_list_v1.hpp  api_auth_token_v1.cpp  api_auth_token_v1.hpp  api_base_configuration_v1.cpp  api_base_configuration_v1.hpp  api_cache_configuration_v1.cpp  api_cache_configuration_v1.hpp  api_exception.hpp  api_guard.cpp  api_guard.hpp  api_horizon_v1.cpp  api_horizon_v1.hpp  api_monitor_v1.cpp  api_monitor_v1.hpp  api_resource_record_v1.cpp  api_resource_record_v1.hpp  api_run_state_v1.cpp  api_run_state_v1.hpp  api_server_v1.cpp  api_server_v1.hpp  api_url_v1.cpp  api_url_v1.hpp  api_v1.cpp  api_v1.hpp  api_zone_v1.cpp  api_zone_v1.hpp  template_cpp  template_hpp
cache/: CMakeLists.txt  dns_forwarding_cache.cpp  dns_forwarding_cache.hpp  dns_recursive_cache.cpp  dns_recursive_cache.hpp  (+2 more)
client/: CMakeLists.txt  (+6 more)
db/: CMakeLists.txt  base-tables.json  column.cpp  column.hpp  connection.cpp  connection.hpp  connection_guard.cpp  connection_guard.hpp  connection_pool.cpp  connection_pool.hpp  dbconf.json  dbgen.py  dbtypes.hpp  foreign_key.cpp  foreign_key.hpp  mongodb_row_helper.cpp  mongodb_row_helper.hpp  mysql_row_helper.cpp  mysql_row_helper.hpp  notes.txt  postgres_row_helper.cpp  postgres_row_helper.hpp  resource-records.json  resource-records.json.new  row.cpp  row.hpp  row_address_list.cpp  row_address_list.hpp  row_address_list_address.cpp  row_address_list_address.hpp  row_address_list_network.cpp  row_address_list_network.hpp  row_basic_config.cpp  row_basic_config.hpp  row_cache_config.cpp  row_cache_config.hpp  row_control_server.cpp  row_control_server.hpp  row_dns_client.cpp  row_dns_client.hpp  (+91 more)
json/: CMakeLists.txt  fd_reader.cpp  fd_reader.hpp  fd_writer.cpp  fd_writer.hpp  file_reader.cpp  file_reader.hpp  file_writer.cpp  file_writer.hpp  json.cpp  json.hpp  json_array_index_range_exception.cpp  json_array_index_range_exception.hpp  json_exception.cpp  json_exception.hpp  json_invalid_key_exception.cpp  json_invalid_key_exception.hpp  json_io_exception.cpp  json_io_exception.hpp  json_parser_exception.cpp  json_parser_exception.hpp  json_pointer_exception.cpp  json_pointer_exception.hpp  json_utf8_exception.cpp  json_utf8_exception.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  pointer.cpp  pointer.hpp  reader.cpp  reader.hpp  stream_reader.cpp  stream_reader.hpp  stream_writer.cpp  stream_writer.hpp  token.cpp  token.hpp  unparser.cpp  (+5 more)
message/: CMakeLists.txt  dns_ipseckey.cpp  dns_ipseckey.hpp  dns_label.cpp  dns_label.hpp  dns_message.cpp  dns_message.hpp  dns_message_envelope.cpp  dns_message_envelope.hpp  dns_message_parser.cpp  dns_message_parser.hpp  dns_message_parser_exceptions.hpp  dns_message_serial.cpp  dns_message_serial.hpp  dns_message_types.hpp  dns_name.cpp  dns_name.hpp  dns_question.cpp  dns_question.hpp  dns_svcparam.cpp  dns_svcparam.hpp  dns_svcparams.cpp  dns_svcparams.hpp  dns_txt.cpp  dns_txt.hpp  dns_txt.hpp.save  dns_type_bitmap.cpp  dns_type_bitmap.hpp
resolver/: CMakeLists.txt  dns_auth_resolver.cpp  dns_auth_resolver.hpp  dns_forwarding_resolver.cpp  dns_forwarding_resolver.hpp  dns_forwarding_slot.cpp  dns_forwarding_slot.hpp  dns_horizon.cpp  dns_horizon.hpp  dns_recursive_resolver.cpp  dns_recursive_resolver.hpp  dns_recursive_slot.cpp  dns_recursive_slot.hpp  dns_recursive_slot_manager.cpp  dns_recursive_slot_manager.hpp
server/: CMakeLists.txt  control_connection.cpp  control_connection.hpp  control_server.cpp  control_server.hpp  dns_doh_connection.cpp  dns_doh_connection.hpp  dns_doh_server.cpp  dns_doh_server.hpp  dns_dot_server.cpp  dns_dot_server.hpp  dns_handler.cpp  dns_handler.hpp  dns_tcp_connection.cpp  dns_tcp_connection.hpp  dns_tcp_server.cpp  dns_tcp_server.hpp  dns_udp_server.cpp  dns_udp_server.hpp  server.cpp  server.hpp  server_container.cpp  server_container.hpp  ui_connection.cpp  ui_connection.hpp  ui_server.cpp  ui_server.hpp
socket/: CMakeLists.txt  address_list.cpp  address_list.hpp  eui48.cpp  eui48.hpp  eui64.cpp  eui64.hpp  ip_address.cpp  ip_address.hpp  network.cpp  network.hpp  socket.cpp  socket.hpp  socket_address.cpp  socket_address.hpp  socket_set.cpp  socket_set.hpp  socket_test.cpp  socket_test.hpp  ssl_server_socket.cpp  ssl_server_socket.cpp.save  ssl_server_socket.hpp  tcp_client_socket.cpp  tcp_client_socket.hpp  tcp_server_socket.cpp  tcp_server_socket.hpp  tcp_socket.cpp  tcp_socket.hpp  udp_socket.cpp  udp_socket.hpp
socket/certs/: adns-gen-cert.sh  adns-install-cert.sh
zone/: CMakeLists.txt  dns_rr.cpp  dns_rr.hpp  dns_rr_A.cpp  dns_rr_A.hpp  dns_rr_AAAA.cpp  dns_rr_AAAA.hpp  dns_rr_AFSDB.cpp  dns_rr_AFSDB.hpp  dns_rr_CAA.cpp  dns_rr_CAA.hpp  dns_rr_CERT.cpp  dns_rr_CERT.hpp  dns_rr_CNAME.cpp  dns_rr_CNAME.hpp  dns_rr_CSYNC.cpp  dns_rr_CSYNC.hpp  dns_rr_DHCID.cpp  dns_rr_DHCID.hpp  dns_rr_DNAME.cpp  dns_rr_DNAME.hpp  dns_rr_EUI48.cpp  dns_rr_EUI48.hpp  dns_rr_EUI64.cpp  dns_rr_EUI64.hpp  dns_rr_GENERIC.cpp  dns_rr_GENERIC.hpp  dns_rr_HINFO.cpp  dns_rr_HINFO.hpp  dns_rr_HTTPS.cpp  dns_rr_HTTPS.hpp  dns_rr_IPSECKEY.cpp  dns_rr_IPSECKEY.hpp  dns_rr_KX.cpp  dns_rr_KX.hpp  dns_rr_LOC.cpp  dns_rr_LOC.hpp  dns_rr_MX.cpp  dns_rr_MX.hpp  dns_rr_NAPTR.cpp  (+50 more)
(+219 files in other folders)
